# OlympTemplate

./: CMakeLists.txt  Mediator.cpp  main.cpp
